--- a/tequila_macros/Cargo.toml
+++ b/tequila_macros/Cargo.toml
@@ -13,3 +13,4 @@ proc-macro-error = "1.0.4"
 reqwest = { version = "0.11.18", features = ["blocking"] }
 syn = { version = "2.0.18", features = ["derive", "full"] }
 url = "2.4.0"
+proc-macro2 = "1.0.60"
