--- a/examples/cli/Cargo.toml
+++ b/examples/cli/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.3.3", features = ["derive"] }
-tequila = { path = ".." }
+tequila = { path = "../.." }
 tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
 url = "2.4.0"
